Started converting tournaments page to allow editing & managment with jsGrid
In this commit, the tournaments are fetched and rendered in a jsGrid.
Inserting, editing and deleting are stubbed out, but it does create the
controls for modifying the fields including dates and country.

--- a/static/css/colors/00-dark-gray.css
+++ b/static/css/colors/00-dark-gray.css
@@ -78,9 +78,10 @@ table td {
 }
 
 .ui-tabs .ui-state-hover, .ui-tabs .ui-state-active,
+.ui-widget-content .ui-state-active,
 .ui-state-active a:link {
 	background: #333;
-	color: #eee;
+	color: #fff;
 }
 .ui-state-highlight {
 	background: #666;
