--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,3 +239,42 @@ button.clearplayercomplete {
 .confirm-merge-table .jconfirm-content-pane {
     display: inline-block;
 }
+
+#transferplayers {
+    font-size: large;
+}
+
+#tournamentspanel, #playerspanel {
+    width-min: 300;
+}
+
+tournamentplayereditmode {
+    width: 45%
+}
+
+#tournamentsspanel .CountrySelector {
+    width-min: 20em;
+}
+
+.hidden {
+    display: none;
+}
+
+.exposed {
+    display: inline-block;
+}
+
+.duplicate-icon-tl {
+    font-size: .875em;
+    position: relative;
+    top: -.25em;
+    left: -.125em;
+    margin-right: .125em;
+}
+
+.duplicate-icon-br {
+    .font-size: .875em;
+    position: absolute;
+    top: .25em;
+    left: .25em
+}
