Refactor tournament and player lists to share jsgrid code in jsgrid-utils
Fixed some width and display issues.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,7 +261,19 @@ tournamentplayereditmode {
 }
 
 #tournamentsspanel .CountrySelector {
-    width-min: 20em;
+    min-width: 20em;
+}
+
+.playernamecolumn {
+    width: 20em;
+}
+
+.playerassoccolumn, .playercountrycolumn, .playertourncolumn {
+    max-width: 10%;
+}
+
+.PlayerSelectBox {
+    width: 3em;
 }
 
 .hidden {
