--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -1,5 +1,8 @@
 {% extends "template.html" %}
 {% block head %}
+<script>
+  var countryList = null, countries = null;
+</script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-utils.js") }}"
 	type="text/javascript"></script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/playerlist.js") }}"
