Change method of conrolling visibility of player merge buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -220,11 +220,12 @@ button.clearplayercomplete {
 #delete-tournament-confirmation {
 	display: none;
 }
-.player-merge-button {
+.jsgrid-table .player-merge-button {
     border: none;
     background-image: url("/static/images/merge-icon-pale-yellow.png");
     background-repeat: no-repeat;
     background-color: transparent;
+    display: inline;
 }
 
 .player-merge-button:hover {
