Revert "Change method of conrolling visibility of player merge buttons"
Too many files committed

This reverts commit e1e2471b5650b384ddb90036b62391c9fe897255.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -220,12 +220,11 @@ button.clearplayercomplete {
 #delete-tournament-confirmation {
 	display: none;
 }
-.jsgrid-table .player-merge-button {
+.player-merge-button {
     border: none;
     background-image: url("/static/images/merge-icon-pale-yellow.png");
     background-repeat: no-repeat;
     background-color: transparent;
-    display: inline;
 }
 
 .player-merge-button:hover {
