--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -14,6 +14,7 @@
 {% block content %}
 <div id="tournamentspanel">
   <h2>All Tournaments</h2>
+  <p>Click ▶ to see players</p>
   <div id="tournamentsGrid">
     Loading...
   </div>
