Initially show Loading... in player list

--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -14,6 +14,7 @@
 {% block content %}
     <h2 class="playerListTitle">All Tournment Players</h2>
     <div id="playersGrid">
+      Loading...
     </div>
 
 {% end %}
