Enable display of players in a tourney within the tournament list

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -288,6 +288,11 @@ tournamentplayereditmode {
     display: inline-block;
 }
 
+#tourneyplayers.tourneyplayersgrid {
+    float: right;
+    width: 80%;
+}
+
 .jsgrid .duplicate-icon-tr {
     padding-left: 0.6em;
     font-size: .7em;
