--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div id="transferplayers" class="button hidden">⇔</div>
+<div id="transferplayersbutton" class="button hidden">⇔</div>
 
 <div id="playerspanel" class="hidden">
   <h2>Available Players</h2>
