--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -20,7 +20,8 @@
   </div>
 </div>
 
-<div id="transferplayersbutton" class="button hidden">⇔</div>
+<div id="transferplayersbutton" class="button hidden"
+     title"Transfer selected players">⇔</div>
 
 <div id="playerspanel" class="hidden">
   <h2>Available Players</h2>
