Add endpoint to initialize/update countries and use it on first launch
The updateCountries endpoint will check the countries in the database
against those of the countries.csv file.  The comparison is done using
the unique country Code field, not the rowID.  It inserts any new
countries it finds in the file and updates any existing ones that
differ from the file's contents.  By updating without chaning the Code
or Id fields, it should not impact any database references already in
the system.  It reports how many entries were found in the database,
how many were inserted and how may were updated.

When the application is first run on an empty database, instead of
automatically creating the Countries table, it offers to create it
once an administrator accoout is set up.

There's no other link to the updateCountries endpoint, so admins
will just have to manually enter it if updates are needed.  That
should only occur when the countries.csv is changed (when a country
is renamed, or changes its flag, for example).

--- a/templates/tournamentHome.html
+++ b/templates/tournamentHome.html
@@ -8,7 +8,21 @@
 {% if no_user %}
 	<p>It appears the database is empty and there are no users.
 	  Would you like to create one?</p>
-	<a class="button" href="setup">SETUP</a>
+	<a class="button bad" href="setup">SETUP</a>
+{% else %}
+    {% if no_countries %}
+	<p>The database has no countries yet.
+	</p>
+	{% if is_admin %}
+	<p> Would you like to create them? </p>
+	<a class="button" href="updateCountries">Initialize Countries</a>
+	{% else %}
+	<p> Please log in as an adminstrator to create them. <p>
+	<a class="button" href="login?next=/updateCountries">
+	  Log in to initialize countries
+	</a>
+	{% end %}
+    {% end %}
 {% end %}
 	<h1>{{ websitename }}</h1>
 	🀄 A website for managing mahjong tournaments. 🀄
