Add penalties to games in playerstats (correctly)
The playerstats now shows penalties assessed to a player in the games
played section and the total penalties assessed in the tournament summary
(or across all tournaments).  This fixes a bug where multiple penalties
on the same player game+round score would cause the average score and rank
to be miscalculated.

--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -92,7 +92,7 @@
 	      </tr>
 	      <tr>
 		<td>Penalties</td>
-		<td colspan="2">{{ tourney['penalties'] }}</td>
+		<td colspan="2">{{ tourney['totalpenalties'] }}</td>
 	      </tr>
 	      <tr>
 		<td>Average Rank</td>
@@ -124,7 +124,7 @@
 		<th>Rank</th><th>Name</th><th colspan="2">Country</th><th>Score</th>
 	      </tr>
 	      {% for result in game['scores'] %}
-	      <tr>
+	      <tr {% if game['penalties'] and result['id'] == tourney['playerID'] %} class="penaltyscore" {% end %} >
 		<td>{{ result['rank'] }}</td>
 		<td><a href="{{ proxyprefix }}playerStats/{{ result['id'] }}?tournament={{ tourney['Id'] }}">
 		    {{ result['name'] }}
@@ -134,6 +134,13 @@
 		<td>{{ result['score'] }}</td>
 	      </tr>
 	      {% end %} <!-- for result in game['scores'] -->
+	      {% for penalty in game['penalties'] %}
+	      <tr class="penaltyscore">
+		<td>Penalty</td>
+		<td colspan="3">{{ penalty['description'] }}</td>
+		<td>{{ penalty['penalty'] }}</td>
+	      </tr>
+	      {% end %}
 	    </table>
 	  </div>
 	  {% end %}  <!-- game in tourney -->
