--- a/static/css/colors/00-dark-gray.css
+++ b/static/css/colors/00-dark-gray.css
@@ -167,3 +167,8 @@ input[type="checkbox"].priority:checked + label {
     fill:       #ff8;
     background: #ff8;
 }
+
+.penaltyscore {
+    background:	#511;
+    color:	#f44;
+}
