--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -26,7 +26,7 @@
 
   <div id="playerspanel" class="hidden">
     <h2>Available Players</h2>
-    <div id="playersgrid">
+    <div id="availableplayersgrid">
     </div>
   </div>
 </div>
