Started download tournament as spreadsheet capability
Using the openpyxl module, downloads are now full spreadsheet
documents rather than CSV files.
This initially replaces the Download Player CSV function
and only includes the list of players in a tournament.
Other tournament information will be placed in other
worksheets in future updates.

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -15,6 +15,7 @@
 	<div id="tournament_title">
 		 {{ tournamentname }}
 	</div>
+	<a href="tournament.xlsx">Download Tournament Spreadsheet</a>
 	<ul>
 		<li data-refresh="5000">
 		  <a href="leaderboard.html">Standings</a></li>
