--- a/templates/template.html
+++ b/templates/template.html
@@ -26,7 +26,7 @@
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js') }}" type="text/javascript"></script>
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js') }}" type="text/javascript"></script>
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js') }}" type="text/javascript"></script>
-		<script src="{{ proxyprefix.rstrip('/') + static_url('js/jsgrid.min.js') }}" type="text/javascript"></script>
+		<script src="{{ proxyprefix.rstrip('/') + static_url('js/jsgrid.js') }}" type="text/javascript"></script>
 		<script src="{{ useLocal('https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js') }}" type="text/javascript"></script>
 		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
