--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -4,8 +4,6 @@
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-utils.js") }}"
 	type="text/javascript"></script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/tournament.js") }}"></script>
-<script src="{{ proxyprefix.rstrip('/') + static_url("js/players.js") }}" 
-	type="text/javascript"></script>
 		<script>
 		  var tab = {% if tab %}"{{ tab }}"{% else %}null{% end %};
 			var tournamentid = {{ tournamentid }};
@@ -29,17 +27,12 @@
 		  <a href="leaderboard.html">Standings</a></li>
 		<li><a href="scoreboard">Scores</a></li>
 		<li><a href="seating.html">Seating</a></li>
-		<li data-id="players"><a href="#players">Players</a></li>
+		<li><a href="players.html">Players</a></li>
 	  {% if is_admin or (current_user and current_user == str(owner)) %}
 		<li><a href="settings.html">Settings</a></li>
      {% comment <li><a href="tourney.html">Tourney</a></li>  %}
 	  {% end %}
 	</ul>
-	<div id="players">
-	  <div id="tourneyplayersgrid">
-	    Loading...
-	  </div>
-	</div>
      {% if is_admin %}
 	<div id="users">
 	</div>
