Added checkbox to control autorefresh of tournament tabs
Checkbox is enabled by default if current date is within a day
of the tournament start and end dates, otherwise off.

Also included missed players.html template from previous commit

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -33,9 +33,10 @@
      {% comment <li><a href="tourney.html">Tourney</a></li>  %}
 	  {% end %}
 	</ul>
-     {% if is_admin %}
-	<div id="users">
+	<div id="refreshcontrol">
+	  <input id="refreshcheckbox" type="checkbox" 
+		 {% if refreshOn %} checked {% end %} />
+	  Automatically refresh this page.
 	</div>
-     {% end %}
 </div>
 {% end %}
