Display player status in tournament using font effects
Regular players show up in regular font.  Substitute players
show up in oblique font.  Inactive players show up with a line
through the text.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -306,10 +306,18 @@ button.clearplayercomplete {
     display: none;
 }
 
-#tourneyplayersgrid {
+#tournamentsgrid #tourneyplayersgrid {
     font-size: 0.8em;
     float: right;
     margin: auto;
+}
+
+.Inactive {
+    text-decoration: line-through;
+}
+
+.Substitute {
+    font-style: oblique;
 }
 
 .jsgrid .duplicate-icon-tr {
