--- a/templates/players.html
+++ b/templates/players.html
@@ -1,5 +1,7 @@
+{% block head %}
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/players.js") }}"
 	type="text/javascript"></script>
+{% end %}
 <div id="players">
   <div id="tourneyplayersgrid">
     Loading...
