--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -29,7 +29,7 @@
 		<li><a href="seating.html">Seating</a></li>
 		<li><a href="players.html">Players</a></li>
 	  {% if is_admin or (current_user and current_user == str(owner)) %}
-		<li><a href="settings.html">Settings</a></li>
+		<li><a href="roundsettings.html">Settings</a></li>
      {% comment <li><a href="tourney.html">Tourney</a></li>  %}
 	  {% end %}
 	</ul>
