Remove Scores tab from tournament page (in favor of getting them in the spreadsheet)

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -25,8 +25,7 @@
 	<ul>
 		<li data-refresh="5000">
 		  <a href="leaderboard.html">Standings</a></li>
-		<li><a href="scoreboard">Scores</a></li>
-		<li><a href="seating.html">Seating</a></li>
+		<li><a href="seating.html">Seating / Scores</a></li>
 		<li><a href="players.html">Players</a></li>
 	  {% if is_admin or (current_user and current_user == str(owner)) %}
 		<li><a href="roundsettings.html">Settings</a></li>
