--- a/templates/tables.html
+++ b/templates/tables.html
@@ -1,7 +1,8 @@
 <div id="seating">
 	<ul>
 		{% for round in sorted(rounds, key=lambda r: r['round']) %}
-				<li><a href="#round-{{ round['round'] }}">{{ round['name'] }}</a></li>
+		<li data-round="{{ round['number'] }}">
+		  <a href="#round-{{ round['round'] }}">{{ round['name'] }}</a></li>
 		{% end %}
 	</ul>
 	{% for round in sorted(rounds, key=lambda r: r['round']) %}
@@ -56,7 +57,7 @@
 								{% if round['winds'] %}
 									<td class="windicator">{{ player['wind'] }}</td>
 								{% end %}
-								<td class="name"><a href="{{ proxyprefix }}playerStats/{{ player['player']['id'] }}">{{ player['player']['name'] }}</a></td>
+								<td class="name"><a href="{{ proxyprefix }}playerStats/{{ player['player']['id'] }}?tournament={{ tournamentid }}">{{ player['player']['name'] }}</a></td>
 								<td class="country">{{ player['player']['country'] }}</td>
 								<td class="flag">{% raw player['player']['flag'] %}</td>
 								<td class="rawscore">
