--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -4,10 +4,11 @@
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/jsgrid-utils.js") }}"
 	type="text/javascript"></script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/tournament.js") }}"></script>
-		<script>
-		  var tab = {% if tab %}"{{ tab }}"{% else %}null{% end %};
-			var tournamentid = {{ tournamentid }};
-		</script>
+<script>
+  var tab = {% if tab %}"{{ tab }}"{% else %}null{% end %},
+  showRound = {% if round %}"{{ round }}"{% else %}null{% end %},
+  tournamentid = {{ tournamentid }};
+</script>
 {% end %}
 {% block title %}
 	- {{ tournamentname }}
