--- a/templates/tables.html
+++ b/templates/tables.html
@@ -1,4 +1,5 @@
 <div id="seating">
+	{% set editable = is_admin or (current_user and current_user == str(owner)) %}
 	<ul>
 		{% for round in sorted(rounds, key=lambda r: r['round']) %}
 		<li data-round="{{ round['number'] }}">
@@ -8,17 +9,19 @@
 	{% for round in sorted(rounds, key=lambda r: r['round']) %}
 		{% set last_cutName = None %}
 		<div class="round" data-round="{{ round['round'] }}" id="round-{{ round['round'] }}">
-		  {% if (is_admin or (current_user and current_user == str(owner))) %}
+		  {% if editable %}
 		        {% if not round['has_scores'] %}
 			<button class="genround">Generate</button><br />
 		        {% end %}
 			<button class="genscores">Randomize Scores</button><br />
 		{% end %}
 			<a href="seating.csv?round={{ round['round'] }}">Download as CSV</a>
-			<div class="roundstatus">
-				Players sitting with players they've played before: {{ round['duplicates'] }}<br />
-				Players sitting with players of the same country: {{ round['diversity'] }}
-			</div>
+			{% if editable %}
+				<div class="roundstatus">
+					Players sitting with players they've played before: {{ round['duplicates'] }}<br />
+					Players sitting with players of the same country: {{ round['diversity'] }}
+				</div>
+			{% end %}
 			<table class="tables">
 				<thead>
 					<tr>
@@ -54,7 +57,7 @@
 					</thead>
 					<tbody class="table" data-tableid="{{ table['table'] }}" data-roundid="{{ round['round'] }}">
 						{% for player in sorted(table['players'], key=lambda p: winds.index(p['wind'])) %}
-						<tr class="player{% if player['player']['id'] in round['diversityplayers'] or player['player']['id'] in round['duplicateplayers'] %} bad{% end %}" data-playerid="{{ player['player']['id'] }}" data-scoreid="{{ player['player']['scoreid'] }}">
+						<tr class="player{% if editable and (player['player']['id'] in round['diversityplayers'] or player['player']['id'] in round['duplicateplayers']) %} bad{% end %}" data-playerid="{{ player['player']['id'] }}" data-scoreid="{{ player['player']['scoreid'] }}">
 								{% if round['winds'] %}
 									<td class="windicator">{{ player['wind'] }}</td>
 								{% end %}
