Made alert icon visible in delete tournament dialog

--- a/static/css/colors/00-dark-gray.css
+++ b/static/css/colors/00-dark-gray.css
@@ -172,3 +172,7 @@ input[type="checkbox"].priority:checked + label {
     background:	#511;
     color:	#f44;
 }
+
+.warning-icon {
+    color: yellow;
+}
