--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -33,9 +33,7 @@
 </div>
 <div id="delete-tournament-confirmation" class="confirm-dialog no-close"
      title="Confirm deletion" >
-  <span class="ui-icon ui-icon-alert"
-	   style="float:left; margin:12px 12px 20px 0;">
-    </span>
+  <span class="warning-icon">⚠ </span>
     Are you sure you want to delete the <span id="tournamentToDelete"></span>
     tournament?
 </div>
