--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 </div>
-<div id="delete-tournament-confirmation" class="confirm-dialog no-close"
+<div id="delete-tournament-confirmation" class="confirm-dialog"
      title="Confirm deletion" >
   <span class="warning-icon">⚠ </span>
     Are you sure you want to delete the <span id="tournamentToDelete"></span>
