Change method of hiding available player list initially in tournaments list

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,7 +279,6 @@ button.clearplayercomplete {
 #playerspanel {
     font-size: 0.8em;
     width: 30%;
-    display: inline-block;
 }
 
 #availableplayersgrid {
@@ -302,7 +301,7 @@ button.clearplayercomplete {
     height: 1em;
 }
 
-.hidden, .hidden * {
+.hidden {
     display: none;
 }
 
