--- a/templates/tournamentlist.html
+++ b/templates/tournamentlist.html
@@ -14,22 +14,22 @@
 {% end %}
 {% block content %}
 <div id="tournamentsEditingPanel">
-  <div id="tournamentspanel">
+  <span id="tournamentspanel">
     <h2>All Tournaments</h2>
     <p>Click ▶ to {% if current_user %}manage{% else %}see{% end %} players</p>
     <div id="tournamentsgrid">
       Loading...
     </div>
-  </div>
+  </span>
 
   <span id="transferplayersbutton" class="button hidden"
 	title="Transfer selected players">⇔</span>
 
-  <div id="playerspanel" class="hidden">
+  <span id="playerspanel" class="hidden">
     <h2>Available Players</h2>
     <div id="availableplayersgrid">
     </div>
-  </div>
+  </span>
 </div>
 <div id="delete-tournament-confirmation" class="confirm-dialog"
      title="Confirm deletion" >
