More skeleton for uploading player spreadsheets but still not done
Back-end connected to verify spreadsheet contents

Coerced non-filename friendly characters in tournament name to underscores
for use in naming spreadhseets.

--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -21,9 +21,9 @@
 	 title="Upload Player Spreadsheet" >
       <div class="spreadsheet-to-upload">
 	Spreadsheet:
-	<span id="spreadsheet-picker">
-	  <input type="file"></input>
-	</span>
+	<form id="spreadsheet-picker">
+	  <input type="file" name="file" required></input>
+	</form>
       </div>
       <div class="possible-ranges">
       </div>
