Enabled GUI selection of player lists from spreadsheet for uploading
Removed home page links to upload spreadsheet and create tournament

--- a/static/css/colors/00-dark-gray.css
+++ b/static/css/colors/00-dark-gray.css
@@ -176,3 +176,7 @@ input[type="checkbox"].priority:checked + label {
 .warning-icon {
     color: yellow;
 }
+
+table.playerLists td, table.playerLists th {
+	border:1px solid #ccc;
+}
