--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -13,7 +13,10 @@
 {% end %}
 {% block content %}
 <h2 class="playerListTitle">All Tournment Players</h2>
-    <button id="uploadPlayerSpreadsheetButton">Add players...</button>
+    <button id="uploadPlayerSpreadsheetButton" class="button centerbutton"
+	    title="Upload player spreadsheet">
+      Add players...
+    </button>
     <div id="playersGrid">
       Loading...
     </div>
